# ambient-verifier

./: .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE  README.rst  ambient-verifier.cabal  cabal.project.dist
.gitlab-ci/: solvers.sh
demos/unbalanced-rop-read/: Makefile  rop-unbal-read.c  rop-unbal-read.exe.expected  rop-unbal-read.exe.yaml  run.sh
demos/unbalanced-rop-read/cbl-overrides/function/: getppid.cbl
demos/unbalanced-rop-read/fs/: stdin
demos/unbalanced-rop-read/overrides/function/: getppid.c  getuid.c  getuid.cbl  isatty.c  isatty.cbl
doc/: Debugging.rst  Design.rst  Environment.rst  Requirements.rst  SymbolicIO.rst
overrides/: README.rst
overrides/libgd/: README.rst
overrides/libgd/function/: free.cbl  gd_error_ex.cbl  printf.cbl
src/Ambient/: ABI.hs  Diagnostic.hs  Discovery.hs  Encoding.hs  EntryPoint.hs  EnvVar.hs  EventTrace.hs  Exception.hs  Extensions.hs  FunctionOverride.hs  Lift.hs  Loader.hs  Memory.hs  MonadState.hs  ObservableEvents.hs  Override.hs  OverrideTester.hs  PLTStubDetector.hs  Panic.hs  Solver.hs  Style.hs  Syscall.hs  Timeout.hs  Verifier.hs
src/Ambient/Extensions/: Memory.hs
src/Ambient/FunctionOverride/: ArgumentMapping.hs  Common.hs  Extension.hs  Overrides.hs  StackArguments.hs
src/Ambient/FunctionOverride/AArch32/: Linux.hs
src/Ambient/FunctionOverride/Extension/: Types.hs
src/Ambient/FunctionOverride/Overrides/: CrucibleStrings.hs  ForwardDeclarations.hs  Networking.hs  Printf.hs  SymIO.hs  SyscallWrappers.hs
src/Ambient/FunctionOverride/X86_64/: Linux.hs
src/Ambient/Loader/: BinaryConfig.hs  LoadOptions.hs  Relocations.hs  Versioning.hs
src/Ambient/Loader/ELF/: DecodeError.hs  DynamicLoader.hs  FunctionSymbols.hs  PLTStubDetector.hs  Symbols.hs
src/Ambient/Memory/: SharedMemory.hs
src/Ambient/Memory/AArch32/: Linux.hs
src/Ambient/Memory/X86_64/: Linux.hs
src/Ambient/ODSL/: EmbeddedData.hs  Paths.hs
src/Ambient/Override/: List.hs
src/Ambient/Override/List/: Types.hs
src/Ambient/Profiler/: EmbeddedData.hs  Paths.hs
src/Ambient/Property/: Definition.hs  Record.hs
src/Ambient/Syscall/: Overrides.hs
src/Ambient/Syscall/AArch32/: Linux.hs
src/Ambient/Syscall/Names/: README  generate_table.py  syscall_arm.tbl  syscall_x86_64.tbl
src/Ambient/Syscall/Overrides/: Networking.hs  SymIO.hs
src/Ambient/Syscall/X86_64/: Linux.hs
src/Ambient/Verifier/: Concretize.hs  Prove.hs  SymbolicExecution.hs  WME.hs  WMM.hs
tests/: Main.hs
tests/binaries/: Makefile  alloc.exe.yaml  crucible-syntax-function-ov.c  fsbase.c  fsbase.exe.expected  function-call.c  function-call.exe.expected  global-read.c  global-read.exe.expected  global-write.exe.expected-failing  just-exit.exe.expected  open-close.exe.expected  read-musl.c  read-musl.exe.yaml  read-symbolic-syscall-num.c  read-symbolic-syscall-num.exe.expected  read-symbolic-syscall-num.exe.yaml  read.exe.expected  rop-read.c  rop-read.exe.expected  rop.c  rop.exe.expected  stack-read.c  stack-read.exe.expected  stack-write.c  stack-write.exe.expected  syscall.exe.expected  write.c  write.exe.expected
tests/binaries/aarch32/: Makefile  bv-typed-literal-ov.c  client-inet.c  client-inet.exe.expected  client-inet.exe.yaml  client-inet6.c  client-inet6.exe.expected  client-unix.exe.expected  client-unix.exe.yaml  do-nothing.c  do-nothing.exe.yaml  err-invalid-overrides-dir.exe.exception  err-invalid-overrides-dir.exe.expected  fd-zero.c  fib.c  getone.h  global-read.c  global-read.exe.expected  main-args.c  main-args.exe.expected  memcpy.c  non-ptr-width-ov-fwd-dec.c  null-check.c  null-check.exe.yaml  plt-ov.c  plt-ov.exe.expected  read.c  read.exe.expected  read.exe.yaml  rop-unbal.c  rop-unbal.exe.yaml  rop.c  rop.exe.yaml  server-inet.c  server-inet6.c  server-inet6.exe.expected  server-unix.exe.expected  shm-fwd-dec.c  shm.exe.expected  short-ov.c  (+10 more)
tests/binaries/aarch32/abs32-relative-reloc/: abs32-relative-reloc.c  abs32-relative-reloc.exe.expected  foo.c
tests/binaries/aarch32/c-override/: c-override.exe.expected
tests/binaries/aarch32/copy-reloc/: copy2.c  copy2.exe.expected
tests/binaries/aarch32/crucible-strings/: crucible-strings.c  crucible-strings.exe.expected
tests/binaries/aarch32/environ/: environ.c  environ.exe.expected
tests/binaries/aarch32/envp/: envp.c  envp.exe.expected  quux.txt
tests/binaries/aarch32/free-basic/: free-basic.c
tests/binaries/aarch32/free-invalid/: free-invalid.c  free-invalid.exe.expected
tests/binaries/aarch32/getenv-symbolic/: getenv-symbolic.c  getenv-symbolic.exe.expected
tests/binaries/aarch32/lookup-scope/: lookup-scope-a.c  lookup-scope.exe.expected
tests/binaries/aarch32/nested-forward-decs/: nested-forward-decs.exe.expected
tests/binaries/aarch32/nested-pointers/: nested-pointers.c  nested-pointers.exe.expected
tests/binaries/aarch32/printf-tailcall/: printf-tailcall.c  (+1 more)
tests/binaries/x86_64/: Makefile  alloc.c  alloc.exe.expected  alloc.exe.yaml  ambient_assert.c  ambient_assert.h  bv-typed-literal-ov.exe.expected  client-inet.c  client-inet.exe.expected  client-inet.exe.yaml  client-inet6.c  client-unix.c  crucible-syntax-function-ov.c  do-nothing.exe.yaml  errno-musl.exe.expected  errno.c  fib.h  funcptr.c  function-call.c  function-call.exe.expected  function-transition-bad.c  function-transition-bad.exe.expected  function-transition-bad.exe.yaml  function-transition-good.c  getone.c  global-ov.c  global-read.c  global-read.exe.expected  global-write.c  infinite-loop.c  infinite-loop.exe.expected  infinite-recursion.c  infinite-recursion.exe.expected  lazy-string-load.c  lazy-string-load.exe.expected  main-args.exe.expected  memcpy.exe.expected  non-ptr-width-ov.c  oe-ov.c  oe-ov.exe.events.json  (+38 more)
tests/filesystems/rop-read/: stdin
tests/filesystems/rop-unbal-read/: stdin
tests/overrides/function/: byte_id.cbl  byte_id_2.cbl  checked_ptr_diff.cbl  copy.cbl  exit_fwd.cbl  getpid.cbl  getppid_fwd.cbl  padd.cbl  shmget_ipc_private.cbl  short_id.cbl  short_id_fwd.cbl  zero_size_t.cbl
tools/ambient-verifier/: GitRev.hs  Main.hs  Options.hs  Version.hs
(+77 files in other folders)
