cabal-version:      2.4
name:               ambient-verifier
version:            0.1.0.0
synopsis:
    A binary verifier for proving relational non-interference and adherence to properties

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Tristan Ravitch
maintainer:         tristan@galois.com, boston@galois.com

-- A copyright notice.
-- copyright:
category:           Verification
extra-source-files: CHANGELOG.md

common shared
    build-depends: base >= 4.10 && < 5,
                   bytestring,
                   containers,
                   exceptions,
                   lumberjack >= 1 && < 1.1,
                   mtl,
                   parameterized-utils,
                   prettyprinter >= 1.7 && < 1.8,
                   text

library
    import: shared
    exposed-modules:  Ambient.Diagnostic,
                      Ambient.Exception,
                      Ambient.Loader,
                      Ambient.Verifier

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    pe-parser,
                      elf-edit,
                      macaw-base,
                      macaw-symbolic,
                      macaw-loader,
                      macaw-loader-x86,
                      flexdis86,
                      macaw-x86,
                      macaw-x86-symbolic,
                      crucible,
                      crucible-llvm

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat

executable ambient-verifier
    import: shared
    main-is:          Main.hs
    other-modules:    Options

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        async >= 2 && < 3,
        optparse-applicative,
        filepath,
        filemanip,
        ambient-verifier

    hs-source-dirs:   tools/ambient-verifier
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -threaded -rtsopts "-with-rtsopts=-N"
