cabal-version:      2.4
name:               ambient-verifier
version:            0.1.0.0
synopsis:
    A binary verifier for proving relational non-interference and adherence to properties

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Tristan Ravitch
maintainer:         tristan@galois.com, boston@galois.com

-- A copyright notice.
-- copyright:
category:           Verification
extra-source-files: CHANGELOG.md

common shared
    build-depends:
        async >= 2 && < 3,
        base >= 4.10 && < 5,
        bytestring,
        bv-sized,
        containers,
        exceptions,
        filepath,
        lens >= 4 && < 6,
        lumberjack >= 1 && < 1.1,
        megaparsec >= 7 && < 10,
        mtl >= 2 && < 3,
        panic >= 0.4 && < 0.5,
        parameterized-utils >= 2 && < 3,
        prettyprinter >= 1.7 && < 1.8,
        yaml >= 0.11 && < 0.12,
        text

library
    import: shared
    exposed-modules:  Ambient.ABI,
                      Ambient.Diagnostic,
                      Ambient.Discovery,
                      Ambient.EventTrace,
                      Ambient.Exception,
                      Ambient.Extensions,
                      Ambient.FunctionOverride,
                      Ambient.FunctionOverride.ArgumentMapping,
                      Ambient.FunctionOverride.Extension,
                      Ambient.FunctionOverride.Overrides,
                      Ambient.FunctionOverride.AArch32.Linux,
                      Ambient.FunctionOverride.X86_64.Linux,
                      Ambient.Lift,
                      Ambient.Loader,
                      Ambient.Memory,
                      Ambient.Memory.AArch32.Linux,
                      Ambient.Memory.X86_64.Linux,
                      Ambient.Override,
                      Ambient.Override.List,
                      Ambient.Override.List.Types,
                      Ambient.OverrideTester,
                      Ambient.Panic,
                      Ambient.PLTStubDetector,
                      Ambient.Profiler.EmbeddedData,
                      Ambient.Profiler.Paths,
                      Ambient.Property.Definition,
                      Ambient.Solver,
                      Ambient.Syscall,
                      Ambient.Syscall.Overrides,
                      Ambient.Syscall.AArch32.Linux,
                      Ambient.Syscall.X86_64.Linux,
                      Ambient.Timeout,
                      Ambient.Verifier,
                      Ambient.Verifier.Concretize,
                      Ambient.Verifier.Prove,
                      Ambient.Verifier.SymbolicExecution,
                      Ambient.Verifier.WME,
                      Ambient.Verifier.WMM

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    time,
                      pe-parser,
                      elf-edit,
                      macaw-base,
                      macaw-symbolic,
                      macaw-loader,
                      macaw-loader-x86,
                      macaw-loader-aarch32,
                      directory,
                      file-embed,
                      filemanip,
                      flexdis86,
                      macaw-x86,
                      macaw-x86-symbolic,
                      asl-translator,
                      macaw-aarch32,
                      macaw-aarch32-symbolic,
                      crucible,
                      crucible-llvm,
                      crucible-symio,
                      crucible-syntax,
                      what4

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat

executable ambient-verifier
    import: shared
    main-is:          Main.hs
    other-modules:    GitRev
                      Options
                      Version

                      Paths_ambient_verifier
    autogen-modules:  Paths_ambient_verifier

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        gitrev,
        optparse-applicative,
        filemanip,
        ambient-verifier

    hs-source-dirs:   tools/ambient-verifier
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -threaded -rtsopts "-with-rtsopts=-N"

test-suite ambient-tests
  import: shared
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests
  build-depends: ambient-verifier,
                 crucible,
                 crucible-syntax,
                 directory,
                 filemanip,
                 tasty,
                 tasty-ant-xml,
                 tasty-expected-failure,
                 tasty-hunit,
                 yaml >= 0.11 && < 0.12
  ghc-options: -Wall -Wcompat
